<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_60_f_225638329_hkxmnhipp1lzea0e3krkqszan7ywnwfv"
    android:foregroundTint="@color/black"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Value"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:background="@drawable/customerbutton"
        android:fontFamily="sans-serif-condensed-medium"
        android:foregroundTint="#FFFFFF"
        android:onClick="valueActivity"
        android:text="@string/Value"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Informaiton"
        app:layout_constraintVertical_bias="0.112"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/theWelcome"
        android:layout_width="196dp"
        android:layout_height="40dp"
        android:layout_marginTop="152dp"
        android:background="#00018786"
        android:fontFamily="sans-serif-black"
        android:text="@string/theWelcome"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#C50546"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Informaiton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Creator"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theWelcome" />

    <TextView
        android:id="@+id/directions"
        android:layout_width="168dp"
        android:layout_height="116dp"
        android:text="@string/Directions"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Value"
        app:layout_constraintVertical_bias="0.105" />
</androidx.constraintlayout.widget.ConstraintLayout>